# blendr

./: .gitignore  README.md  pyproject.toml
docs/plans/: 2026-06-19-blendr-design.md
src/blendr/: __init__.py  core.py  formatting.py  gui.py  storage.py
tests/: test_core.py  test_formatting.py  test_storage.py
