[project]
name = "blendr"
version = "0.1.0"
description = "Calculate the weighted-average entry price of a trading position."
readme = "README.md"
authors = [
    { name = "JungiKim", email = "kjungi704@gmail.com" }
]
requires-python = ">=3.11.5"
dependencies = []

[project.scripts]
blendr = "blendr.gui:main"

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.0",
]
